Adiciona config inicial React

--- a/react-webpack/index.html
+++ b/react-webpack/index.html
@@ -6,6 +6,9 @@
     <body>
 
         <h1>Modulo I - Webpack</h1>
+        <div data-js="app"> 
+
+        </div>
 
         <script src="/static/bundle.js"></script>
     </body>
