--- a/react-webpack/index.html
+++ b/react-webpack/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>React Ninja</title>
+
+        <link rel="shortcut icon" href="favicon.ico" type = “image/x-icon” />
+        <link rel = “icon” href = ”favicon.ico” type = “image/x-icon” />
     </head>
     <body>
 
