Remove arquivos nao utilizadas

--- a/react-webpack/index.html
+++ b/react-webpack/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-        <h1>Modulo I - Webpack</h1>
+        <h1>Bem vindo ao seu novo projeto em React</h1>
         <div data-js="app"> 
 
         </div>
